--- a/Css/CourierFormStyling.css
+++ b/Css/CourierFormStyling.css
@@ -49,11 +49,11 @@ body {
   }
   input,
   select {
-    height: 37px;
-    width: 87%;
-    border: none;
+    height: 37px ;
+    width:80% !important;
+    border: 0px solid black !important;
+    background-color: #EDEADE;
     font-size: 16px;
-    outline: none;
     font-weight: 600;
     border-radius: 6px;
     padding: 0 0 0 45px;
@@ -62,6 +62,7 @@ body {
   select {
     font-size: medium;
     font-weight: bold;
+    padding-left: 50px;
   }
   label,
   h3 {
