--- a/Css/FormStyling.css
+++ b/Css/FormStyling.css
@@ -72,7 +72,17 @@ input {
   padding: 0 0 0 45px;
   margin-bottom: 7px;
 }
-
+#type{
+  width: 100%;
+  height: 37px;
+  border: none;
+  font-size: 16px;
+  outline: none;
+  font-weight: 600;
+  border-radius: 6px;
+  padding: 0 0 0 45px;
+  margin-bottom: 7px;
+}
 
 
 #area-select {
