--- a/Css/CourierFormStyling.css
+++ b/Css/CourierFormStyling.css
@@ -1,12 +1,12 @@
 body {
     padding: 0px;
     margin: 0px;
-    background-image: url("pic/backmap2.jpg");
+    /* background-image: url("pic/backmap2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    font-family: sans-serif !important;
+    font-family: sans-serif !important; */
   }
   .container {
     display: flex;
@@ -25,8 +25,8 @@ body {
     border-radius: 22px;
     /* backdrop-filter: blur(10px); */
     /* background-color: rgb(0 0 0 / 51%); */
-    background: rgba(255, 255, 255, 0.33);
-    backdrop-filter: blur(5.1px);
+    /* background: rgba(255, 255, 255, 0.33);
+    backdrop-filter: blur(5.1px); */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 30px;
   }
   .item1-1 {
@@ -40,9 +40,7 @@ body {
     font-weight: bold;
   }
   
-  #status {
-    width: 95%;
-  }
+  
   label {
     align-self: flex-start;
     padding: 10px 10px 10px 10px;
@@ -51,8 +49,8 @@ body {
   select {
     height: 37px ;
     width:80% !important;
-    border: 0px solid black !important;
-    background-color: #EDEADE;
+    border: 1px solid black !important;
+    /* background-color: #EDEADE; */
     font-size: 16px;
     font-weight: 600;
     border-radius: 6px;
@@ -64,6 +62,9 @@ body {
     font-weight: bold;
     padding-left: 50px;
   }
+  #status {
+    width: 95%;
+  }
   label,
   h3 {
     /* color: rgb(255, 255, 255); */
@@ -73,7 +74,7 @@ body {
   #btn {
     font-size: 18px;
     background: black;
-    width: 40%;
+    width: 30%;
     color: #e8e8e8;
     padding: 0px;
     text-transform: uppercase;
