update assign Shipment

--- a/Css/TableStyle.css
+++ b/Css/TableStyle.css
@@ -31,3 +31,15 @@ h1 {
     /* color:  #37bc; */
     color: black;
 }
+td a {
+  text-decoration :none;
+  color:black;
+  font-size:larger;
+  font-weight:bold; 
+}
+tr th {
+  text-transform :uppercase;
+}
+tr td {
+  font-weight:bold; 
+}
