--- a/Css/NavStyle.css
+++ b/Css/NavStyle.css
@@ -73,3 +73,34 @@ nav button a {
   color: black;
   text-decoration: none;
 }
+
+@media screen and (max-width: 768px) {
+  nav ul {
+    display: block;
+    text-align: center;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 0;
+  }
+
+  nav ul li a {
+    display: block;
+    padding: 10px 20px; /* Adjust padding for smaller screens */
+  }
+
+  nav ul li ul {
+    position: static;
+    display: none;
+    background: none;
+  }
+
+  nav button {
+    position: static;
+        margin: 0 auto; /* Center the button */
+        display: block;
+        margin-top: 10px;
+  }
+}
+
